--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+.center {
     text-align: center;
     margin: 0;
     position: absolute;
@@ -6,4 +6,12 @@ body {
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 10px;
+    text-align:center;
 }
